--- a/CFn/iam-best-practices/iam-user-for-aws-console-login.yaml
+++ b/CFn/iam-best-practices/iam-user-for-aws-console-login.yaml
@@ -19,8 +19,16 @@ Parameters:
     AllowedValues:
     - 'true'
     - 'false'
+  AllowCreateAccessKey:
+    Description: Allow users to create access keys
+    Type: String
+    Default: 'false'
+    AllowedValues:
+    - 'true'
+    - 'false'
 Conditions:
   IsSampleIamUser: !Equals [!Ref 'SampleIamUserEnable', 'true']
+  IsAllowCreateAccessKey: !Equals [!Ref 'AllowCreateAccessKey', 'true']
 Resources:
   IamUserAdminSample:
     Type: AWS::IAM::User
@@ -112,9 +120,7 @@ Resources:
         - Effect: Allow
           Action:
           - iam:ChangePassword,
-          - iam:CreateAccessKey,
           - iam:CreateLoginProfile,
-          - iam:DeleteAccessKey,
           - iam:DeleteLoginProfile,
           - iam:GetLoginProfile,
           - iam:ListAccessKeys,
@@ -143,17 +149,38 @@ Resources:
         - Effect: Allow
           Action:
           - iam:DeactivateMFADevice
-          - iam:UpdateAccessKey,
           - iam:UpdateLoginProfile,
+          Resource:
+          - !Join ['', ['arn:aws:iam::', !Ref 'AWS::AccountId', ':mfa/${aws:username}']]
+          - !Join ['', ['arn:aws:iam::', !Ref 'AWS::AccountId', ':user/${aws:username}']]
+          Condition:
+            Bool:
+              aws:MultiFactorAuthPresent: 'true'
+      Groups:
+      - !Ref 'IamGroupAdmin'
+      - !Ref 'IamGroupPowerUser'
+      - !Ref 'IamGroupReadonly'
+  IamPolicyllowCreateAccessKey:
+    Type: AWS::IAM::Policy
+    Condition: IsAllowCreateAccessKey
+    Properties:
+      PolicyName: policy-manage-self-credentials
+      PolicyDocument:
+        Version: '2012-10-17'
+        Statement:
+        - Effect: Allow
+          Action:
+          - iam:CreateAccessKey,
+          - iam:UpdateAccessKey,
+          - iam:DeleteAccessKey,
           - iam:DeleteSigningCertificate,
           - iam:UpdateSigningCertificate,
           - iam:UploadSigningCertificate,
           - iam:GetSSHPublicKey,
           - iam:DeleteSSHPublicKey,
           - iam:UpdateSSHPublicKey,
-          - iam:UploadSSHPublicKey,
+          - iam:UploadSSHPublicKey
           Resource:
-          - !Join ['', ['arn:aws:iam::', !Ref 'AWS::AccountId', ':mfa/${aws:username}']]
           - !Join ['', ['arn:aws:iam::', !Ref 'AWS::AccountId', ':user/${aws:username}']]
           Condition:
             Bool:
