--- a/CFn/elblog-to-firehose/cfn-s3-lambda-firehose.yaml
+++ b/CFn/elblog-to-firehose/cfn-s3-lambda-firehose.yaml
@@ -249,6 +249,7 @@ Resources:
         RoleARN: !GetAtt 'Step3deliveryRole.Arn'
         ProcessingConfiguration:
           Enabled: 'false'
+
   Step3deliveryRole:
     Type: AWS::IAM::Role
     Properties:
@@ -283,11 +284,10 @@ Resources:
               - !Sub 'arn:aws:s3:::${Step4S3bucket}*'
       Roles:
         - !Ref 'Step3deliveryRole'
-  Step3LogGroupLambda:
+  Step3LogGroupFirehose:
     Type: AWS::Logs::LogGroup
     Properties:
       LogGroupName: !Sub '/aws/firehose/${Step3deliverystream}'
-      LogStreamName: !Ref 'Step3deliverystream'
       RetentionInDays: 7
 
   Step4S3bucket:
