[modifu] レプリケーション受入の為、s3バージョニング有効化

--- a/CFn/elblog-to-firehose/cfn-s3-lambda-firehose.yaml
+++ b/CFn/elblog-to-firehose/cfn-s3-lambda-firehose.yaml
@@ -19,6 +19,8 @@ Resources:
                 Rules:
                   - Name: suffix
                     Value: gz
+      VersioningConfiguration:
+        Status: Enabled
   Step1S3BucketPolicy:
     Type: AWS::S3::BucketPolicy
     Properties:
